# un-orchestrator

./: .gitignore  AUTHORS  COPYRIGHT  README  README.md
NFs/: README
NFs/docker/example/: CMakeLists.txt  Dockerfile  README  README.md  example.c
name-resolver/: CMakeLists.txt  README  README.md  constants.h  implementation.cc  implementation.h  logger.c  name_resolver.cc  nf.cc  nf.h  rest_server.cc  rest_server.h
name-resolver/config/: example.xml  network-functions.xsd
orchestrator/: CMakeLists.txt  README  README.md  README_COMMANDS  README_COMMANDS.md  README_COMPILE  README_COMPILE.md  README_RESTAPI.md  README_RUN.md  README_RUN_OVS.md  README_RUN_XDPD.md  TODO  commands.txt  example.json  node_orchestrator.cc
orchestrator/compute_controller/: README.md  compute_controller.cc  compute_controller.h  description.cc  description.h  implementation.cc  implementation.h  nf.cc  nf.h  nf_type.h  nfs_manager.cc  nfs_manager.cc~  nfs_manager.h  startNF_in.h  stopNF_in.h
orchestrator/compute_controller/libvirt/: libvirt.cc  libvirt.h
orchestrator/compute_controller/nf_repository/kvm/: ovs-ovsdbkvm_usvhost_vnf.xml
orchestrator/compute_controller/plugins/docker/: docker.cc  docker.h  docker_constants.h
orchestrator/compute_controller/plugins/docker/scripts/: checkDockerRun.sh  pullAndRunNF.sh
orchestrator/compute_controller/plugins/dpdk/: dpdk.cc  dpdk.h  dpdk_constants.h
orchestrator/compute_controller/plugins/kvm-libvirt/: libvirt.cc  libvirt.h  libvirt_constants.h
orchestrator/compute_controller/scripts/docker/: pullAndRunNF.sh
orchestrator/compute_controller/scripts/kvm/: stopNF.sh
orchestrator/config/: bng_nat_nffg.json  example.xml  kvm_usvhost_nffg.json  physical-ports.xsd  physical_ports-example.xml  simple_passthrough_nffg.json  universal-node-example.xml  universal-node-schema.xsd
orchestrator/controller/: controller.cc  controller.h
orchestrator/graph/: match.cc  match.h
orchestrator/graph/high_level_graph/: high_level_action.h  high_level_action_endpoint.h  high_level_action_nf.h  high_level_action_port.cc  high_level_action_port.h  high_level_graph.cc  high_level_graph.h  high_level_match.h  high_level_rule.h
orchestrator/graph/low_level_graph/: action.cc  action.h  graph.cc  graph.h  low_level_match.cc  low_level_match.h  rule.cc  rule.h
orchestrator/graph_manager/: graph_info.cc  graph_info.h  graph_manager.cc  graph_manager.h  graph_translator.h  rule_removed_info.h
orchestrator/graph_manager/scripts/: attachWirelessInterface.sh  detachWirelessInterface.sh
orchestrator/network_controller/openflow_controller/: controller.cc  controller.h
orchestrator/network_controller/switch_manager/: README.md  addNFports_in.h  addNFports_out.h  addVirtualLink_in.h  addVirtualLink_out.h  checkPhysicalPorts_in.h  createLSIin.h  createLSIout.h  destroyNFports_in.h  destroyVirtualLink_in.h  lsi.cc  lsi.h  switch_manager.h
orchestrator/network_controller/switch_manager/plugins/ovs/: commands.cc  commands.h  ovs_constants.h  ovs_manager.cc  ovs_manager.h
orchestrator/network_controller/switch_manager/plugins/ovs-dpdk/: ovsdpdk_constants.h  ovsdpdk_manager.cc  ovsdpdk_manager.h
orchestrator/network_controller/switch_manager/plugins/ovs-dpdk/scripts/: VirtualLink.sh  addPort.sh  createLsi.sh  ovs.conf
orchestrator/network_controller/switch_manager/plugins/ovs-ovsdb/: commands.cc  commands.h  ovsdb_constants.h  ovsdb_manager.cc  ovsdb_manager.h
orchestrator/network_controller/switch_manager/plugins/ovs/scripts/: IdPort.sh  OFVersion.sh  VirtualLink.sh
orchestrator/network_controller/switch_manager/plugins/xdpd/: xdpd_constants.h  xdpd_manager.cc  xdpd_manager.h
orchestrator/network_controller/switch_manager/xdpd/: xdpd_constants.h  xdpd_manager.cc  xdpd_manager.h
orchestrator/network_controller/switch_manager/xdpd/config/: example.xml  xdpd-ports.xsd
orchestrator/nfs_manager/: nf.cc  nf.h  nfs_manager.cc  nfs_manager.h
orchestrator/nfs_manager/scripts/docker/: checkDockerRun.sh  pullAndRunNF.sh  stopNF.sh
orchestrator/nfs_manager/scripts/dpdk/: pullAndRunNF.sh  stopNF.sh
orchestrator/nfs_manager/scripts/kvm/: checkKvmRun.sh  pullAndRunNF.sh
orchestrator/node_resource_manager/graph/: generic_action.cc  generic_action.h  match.cc  match.h  vlan_action.cc  vlan_action.h
orchestrator/node_resource_manager/graph/high_level_graph/: high_level_action.cc  high_level_action.h  high_level_action_endpoint.cc  high_level_action_endpoint.h  high_level_action_nf.cc  high_level_action_nf.h  high_level_action_port.cc  high_level_action_port.h  high_level_graph.h  high_level_match.cc  high_level_match.h  high_level_output_action.cc  high_level_output_action_endpoint.cc  high_level_output_action_endpoint.h  high_level_output_action_nf.cc  high_level_output_action_nf.h  high_level_output_action_port.cc  high_level_output_action_port.h  high_level_rule.cc  high_level_rule.h
orchestrator/node_resource_manager/graph/low_level_graph/: action.cc  action.h  graph.cc  graph.h  low_level_match.cc  low_level_match.h  output_action.cc  output_action.h  rule.cc  rule.h
orchestrator/node_resource_manager/graph_manager/: fileParser.cc  fileParser.h  graph_info.cc  graph_info.h  graph_manager.cc  graph_manager.h  graph_translator.cc  graph_translator.h  lsi.cc  lsi.h  nf_port_req.h
orchestrator/node_resource_manager/rest_server/: match_parser.cc  match_parser.h  rest_server.cc  rest_server.h
orchestrator/node_resource_manager/rest_server/python/: constants.py  parser.py
orchestrator/node_resource_manager/virtualizer/: actionsParser.py  constants.py  virtualizer.cc  virtualizer.h  virtualizer.py
orchestrator/rest_server/: match_parser.h  rest_server.cc  rest_server.h
orchestrator/switch_manager/: lsi.h  switch_manager.h  virtual_link.h
orchestrator/switch_manager/xdpd/: virtual_link.h  xdpd_constants.h  xdpd_lsi.cc  xdpd_lsi.h  xdpd_manager.cc  xdpd_manager.h
orchestrator/utils/: constants.h  logger.c  logger.h
orchestrator/xdpd_manager/: lsi.cc  lsi.h  virtual_link.cc  xdpd_manager.cc  xdpd_manager.h
utils/: configure_dpdk.sh  (+1 more)
(+35 files in other folders)
